--- a/truegrf.yaml
+++ b/truegrf.yaml
@@ -1,4 +1,7 @@
 description: A new TrueGRF project based on FIRS Steeltown
+grfid: f148049b
 license: GPL-2.0
+name: steeltowntest
 type: industry
+url: https://github.com/RoyalExamination9410/steeltowntest
 version: 6
